hphp/test/slow/ctor_param_promotion_bad_mod.php.expectf
Fatal error: syntax error, unexpected T_VARIABLE, expecting T_DOUBLE_COLON in %stest/slow/ctor_param_promotion_bad_mod.php on line 7
